<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExportTrashDataActivity" android:id="@+id/constraintLayout3">

    <TextView
            android:text="@string/export_data_header_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/export_data_header_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="36sp" android:textAlignment="center"
            android:layout_marginTop="16dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/export_data_instrutions_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/export_data_instructions_text_view"
            app:layout_constraintTop_toBottomOf="@+id/export_data_header_text_view"
            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/export_form_constraint_layout"
            app:layout_constraintTop_toBottomOf="@+id/export_data_instructions_text_view"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:text="@string/server_url_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/server_url_prompt_text_view"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/server_url_edit_text" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/server_url_prompt_text_view" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/server_url_hint_text"/>
        <Button
                android:text="@string/export_button_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/start_export_button"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginBottom="64dp" android:enabled="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>