<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BLEConnActiveActivity">

    <TextView
            android:text="@string/active_ble_connection_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="64dp" android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <TextView
            android:text="@string/active_ble_connection_help_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/active_ble_connection_helper_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/disconnect_ble_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stop_ble_service_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>