<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/WelcomeConstraintLayout">

        <TextView
                android:text="@string/home_screen_welcome_text_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/welcome_screen_top_textview"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="50sp" android:textStyle="bold"/>
        <TextView
                android:text="@string/home_screen_welcome_text_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/welcome_screen_bottom_textview"
                app:layout_constraintTop_toBottomOf="@+id/welcome_screen_top_textview"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:textSize="18sp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LoginConstraintLayout"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/welcome_screen_username_edittext" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/enter_username_hint_text"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/welcome_screen_login_button"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/welcome_screen_login_button"
                app:layout_constraintEnd_toEndOf="@+id/welcome_screen_username_edittext"
                android:layout_marginEnd="8dp" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:visibility="visible"
                android:text="@string/welcome_screen_login_button_text" android:enabled="false"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>