<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BLEPairingActivity" android:id="@+id/constraintLayout">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/ble_discovered_devices_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/ble_pairing_header_layout">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/ble_discovered_devices_recyclerview"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ble_discovered_devices_list_header_textview"/>
        <TextView
                android:text="@string/ble_discovered_devices_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ble_discovered_devices_list_header_textview"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/ble_pairing_header_layout">

        <TextView
                android:text="@string/ble_pairing_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ble_pairing_header_text"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:textSize="36sp" android:layout_marginTop="8dp"
                android:textStyle="bold"/>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/ble_pairing_scan_control_layout"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ble_pairing_header_text">

            <TextView
                    android:text="@string/ble_start_scan_text_actively_scanning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/ble_start_scan_textview"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>